[package]
name = "x11-over-vsock"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
async-std = "1"
async-io = "1"
futures-util = "0.3"
futures-io = "0.3"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
uuid = { version = "0.8", features = ["guid"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"