[package]
name = "wsld"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["net", "rt", "macros", "io-util", "process", "time"] }
libc = "0.2"
humantime = "2.1"
humantime-serde = "1.0"
serde = { version = "1", features = [ "derive" ] }
toml = "0.5"
once_cell = "1.5"
dirs = "3.0"
log = "0.4"
env_logger = "0.8"
