[package]
name = "x11-over-vsock-server"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["net", "rt", "macros", "io-util", "time"] }
async-io = "1"
once_cell = "1"
winapi = { version = "0.3", features = ["wincon", "libloaderapi", "combaseapi"] }
widestring = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["serde"] }

