[package]
name = "wsldhost"
version = "0.1.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2021"

[dependencies]
tokio = { version = "~1.20", features = ["net", "rt", "macros", "io-util", "time"] }
async-io = "1"
once_cell = "1"
winapi = { version = "0.3", features = ["wincon", "libloaderapi", "combaseapi"] }
winreg = "0.50"
widestring = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
